[project]
name = "rapyuta-io-sdk-v2"
dynamic = ["version"]
description = "Python SDK for rapyuta.io v2 APIs"
dependencies = [
    "httpx>=0.27.2",
    "mock>=5.1.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "tenacity>=9.0.0",
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.version]
path = "rapyuta_io_sdk_v2/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["rapyuta_io_sdk_v2"]
