[project]
name = "rapyuta-io-sdk-v2"
dynamic = ["version"]
description = "Python SDK for rapyuta.io v2 APIs"
dependencies = [
    "httpx>=0.27.2",
    "munch>=4.0.0",
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.version]
path = "rapyuta_io_sdk_v2/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["rapyuta_io_sdk_v2"]

[dependency-groups]
dev = [
    "coverage>=7.6.1",
    "mock>=5.1.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "anyio>=4.5.2",
    "asyncer>=0.0.8",
    "typing-extensions>=4.12.2",
    "pytest-asyncio>=0.24.0",
    "asyncmock>=0.4.2",
]
